        # Config::Tiny: clive 2.0 - 2.1
        cat >> ~/.config/clive/config
        [http]
            proxy = "http://foo:1234"
        [output]
            savedir = "/home/user/videos"

        # Getopt::ArgvFile: clive 2.2
        cat >> ~/.cliverc
        --proxy="http://foo:1234"
        --savedir="/home/user/videos"
    -----------------------------------------------

  * Cache changes
    1. Cache is now passive (read:no, write:yes)
    2. Add: --cache- option prefix
    3. New option: --cache-read, --no-cache
    5. Rename: misc. options (e.g. --show -> --cache-dump)
    6. Record field changes
        o Breaks compatibility with previous versions 
    7. New field delimiter '#'
    8. New field order

  * File path changes
    1. ~/.config/clive/config -> ~/.cliverc
    2. ~/.config/clive/recall -> ~/.clivelast
    3. ~/.config/clive/cache -> ~/.clivecache

  * --format changes
    1. Add: --format=best support (closes  issue #15 )
    2. Rename: mp4 -> fmt18 (Youtube)
    3. Rename: Dailymotion ID spark -> flv

  * Bugfixes
    1. cURL error handling
    2. Google mp4 support
    3. Do not strip link params (closes debian bug #530659)
    4. --format=fmt6 (no longer supported by Youtube?) 
    5. Dailymotion ID parsing

  * New options:
    1. --home-dir
    2. --recall-file
    3. --cache-file
    4. --no-cclass
    5. --raw

  * --emit-csv: changes to CSV fields (cleanup, print only the necessary fields)
    1. clive 2.0 - 2.1:
        page_link,          video_link,     filename,   file_length_mb,
        file_length_bytes,  video_id,       time_stamp, page_title,
        initial_length,     remaining_bytes
    2. clive 2.2:
        base_filename, file_length, video_link

  * Remove options:
    1. --savebatch
    2. --renew (now obsolete)
    3. --youtube-user (broken since 2.1)
    4. --youtube-pass (...)
    5. --no-login (...)
    6. --clivepass (...)
    7. --emit-xml
    8. --background
    9. --progress
    10. --output
    11. --append